Rename configuration file to sample

--- a/config.cpp.SAMPLE
+++ b/config.cpp.SAMPLE
@@ -1,3 +1,9 @@
+/*
+ * THIS IS A SAMPLE
+ *
+ * You must copy this file to 'config.cpp' and edit the copy.
+ */
+
 #include "config.h"
 
 // This configures how to connect to your WiFi:
