--- a/config.cpp.SAMPLE
+++ b/config.cpp.SAMPLE
@@ -1,7 +1,8 @@
 /*
- * THIS IS A SAMPLE
+ * THIS IS A SAMPLE: you must copy this file to 'config.cpp' and edit the copy.
  *
- * You must copy this file to 'config.cpp' and edit the copy.
+ * Git will ignore the 'config.cpp' copy with your secrets, so you don't
+ * have to worry about accidentally commiting them.
  */
 
 #include "config.h"
